--- a/BackupServer/BackupServer.csproj
+++ b/BackupServer/BackupServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -12,6 +12,10 @@
 
   <ItemGroup>
     <Protobuf Include="../Protos/backup.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="backup\" />
   </ItemGroup>
 
 </Project>
