--- a/BackupServer/appsettings.json
+++ b/BackupServer/appsettings.json
@@ -12,5 +12,12 @@
         "Url": "http://localhost:5000"
       }
     }
+  },
+  "BackupSettings": {
+    "DbUser": "postgres",
+    "DbName": "MyDb",
+    "DbPassword": "postgres",
+    "PgDumpPath": "/usr/bin/pg_dump", // Путь к pg_dump на Linux
+    "BackupPath": "/backups" // Путь для сохранения бэкапов
   }
 }
