донастроил при работе на внешнем сервере с postgres

--- a/BackupServer/appsettings.json
+++ b/BackupServer/appsettings.json
@@ -5,11 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "localhost",
+  "AllowedHosts": "*",
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:5000"
+        "Url": "http://*:5000"
+      },
+      "gRPC": {
+        "Url": "https://*:5001",
+        "Protocols": "Http2",
+        "Certificate": {
+          "Path": "grpc-cert.pfx",
+          "Password": "1234"
+        }
       }
     }
   },
@@ -18,6 +26,8 @@
     "DbName": "MyDb",
     "DbPassword": "postgres",
     "PgDumpPath": "/usr/bin/pg_dump", // Путь к pg_dump на Linux
-    "BackupPath": "/backups" // Путь для сохранения бэкапов
+    "BackupPath": "/backups", // Путь для сохранения бэкапов
+    "DbHost": "127.0.0.1",
+    "DbPort": "5432"
   }
 }
